# png-inverter

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.MD  conanfile.py
.github/workflows/: build-and-test.yml  release.yml
include/: png-inverter.h
src/: png-inverter.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  test.cpp
